force-app/main/default/objects/Script__c/Script__c.object-meta.xml
<CustomObject>
    <description>Script is a base for movie.</description>
    <label>Script</label>
    <nameField>
        <displayFormat>SCRT-{0000}</displayFormat>
        <label>Script Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>