force-app/main/default/objects/Script__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>genre picklist</description>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genres</valueSetName>
    </valueSet>
</CustomField>