force-app/main/default/objects/Script__c/fields/LegacyId__c.field-meta.xml
<CustomField>
    <fullName>LegacyId__c</fullName>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>