force-app/main/default/objects/Script__c/fields/NumberOfActors__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActors__c</fullName>
    <defaultValue>0</defaultValue>
    <description>number of actors in script</description>
    <label>Number of Actors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>