force-app/main/default/objects/Script__c/fields/PreProductionDays__c.field-meta.xml
<CustomField>
    <fullName>PreProductionDays__c</fullName>
    <inlineHelpText>only integers, no decimal places</inlineHelpText>
    <label>Pre-production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>