force-app/main/default/objects/Script__c/fields/ProductionDays__c.field-meta.xml
<CustomField>
    <fullName>ProductionDays__c</fullName>
    <description>number of days for production</description>
    <inlineHelpText>only integers, no decimal places</inlineHelpText>
    <label>Production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>