force-app/main/default/objects/Script__c/fields/RolesNeeded__c.field-meta.xml
<CustomField>
    <fullName>RolesNeeded__c</fullName>
    <label>Roles Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RoleTypes</valueSetName>
    </valueSet>
</CustomField>